--- a/package.json
+++ b/package.json
@@ -26,27 +26,29 @@
     "typecheck": "npm run typecheck:main && npm run typecheck:preload && npm run typecheck:renderer"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.9.1",
-    "@vitejs/plugin-vue": "2.0.1",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
     "@vue/test-utils": "2.0.0-rc.18",
     "cross-env": "7.0.3",
     "dts-for-context-bridge": "0.7.1",
     "electron": "16.0.5",
     "electron-builder": "22.14.5",
     "electron-devtools-installer": "3.2.0",
-    "eslint": "8.6.0",
-    "eslint-plugin-vue": "8.2.0",
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
     "happy-dom": "2.25.1",
     "nano-staged": "0.5.0",
     "playwright": "1.17.2",
     "simple-git-hooks": "2.7.0",
     "typescript": "4.5.4",
     "vite": "2.7.10",
-    "vitest": "0.0.140",
-    "vue-tsc": "0.30.2"
+    "vitest": "0.0.140"
   },
   "dependencies": {
     "electron-updater": "4.6.5",
-    "vue": "3.2.26"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
