--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@vue/test-utils": "2.0.0-rc.18",
     "cross-env": "7.0.3",
     "dts-for-context-bridge": "0.7.1",
-    "electron": "16.0.5",
+    "electron": "^13.1.9",
     "electron-builder": "22.14.5",
     "electron-devtools-installer": "3.2.0",
     "eslint": "^8.6.0",
@@ -47,6 +47,14 @@
     "vitest": "0.0.140"
   },
   "dependencies": {
+    "@codemirror/commands": "^0.19.7",
+    "@codemirror/gutter": "^0.19.9",
+    "@codemirror/highlight": "^0.19.7",
+    "@codemirror/history": "^0.19.2",
+    "@codemirror/lang-javascript": "^0.19.6",
+    "@codemirror/language": "^0.19.7",
+    "@codemirror/matchbrackets": "^0.19.3",
+    "@codemirror/state": "^0.19.6",
     "electron-updater": "4.6.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
